--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,18 +65,19 @@
 		align-items: center;
 	}
 	/* clears the 'X' from Internet Explorer */
-	input.hide-clear[type='search']::-ms-clear,
-	input.hide-clear[type='search']::-ms-reveal {
-		display: none;
-		width: 0;
-		height: 0;
-	}
-
-	/* clears the 'X' from Chrome */
-	input.hide-clear[type='search']::-webkit-search-decoration,
-	input.hide-clear[type='search']::-webkit-search-cancel-button,
-	input.hide-clear[type='search']::-webkit-search-results-button,
-	input.hide-clear[type='search']::-webkit-search-results-decoration {
-		display: none;
+	input.hide-clear[type='search'] {
+		&::-ms-clear,
+		&::-ms-reveal {
+			display: none;
+			width: 0;
+			height: 0;
+		}
+		/* clears the 'X' from Chrome */
+		&::-webkit-search-decoration,
+		&::-webkit-search-cancel-button,
+		&::-webkit-search-results-button,
+		&::-webkit-search-results-decoration {
+			display: none;
+		}
 	}
 }
